--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.4.1
   intl: ^0.17.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
