feat(kka): Add kka page, detail kka page. - Create kka page - Create detail kka page - Add kka filtering functionality - create a feature to view kka files
feat(follow up) add follow up page, detail follow up page, document file follow up page
- Create follow up page
- Create detail follow up page,
- Create document file follow up page
- Add follow up filtering functionality
- create a feature for viewing follow up file
- create filters for downloading follow up files

feat(report) add report page, detail report page
- Create report page
- Add report filtering functionality
- create a feature for viewing report file

feat(profile page) add profile page, edit profile page
- Create profile page
- Create edit profile page.
- create a feature for editing profile

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   path_provider: ^2.1.2
   permission_handler: ^11.3.0
   syncfusion_flutter_pdfviewer: any
-  downloads_path_provider_28: ^0.1.2
+  downloads_path_provider_28: any
 
 dev_dependencies:
   flutter_test:
