--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,21 +5,20 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     
     <queries>
-               
-                <intent>
-                    <action android:name="android.intent.action.VIEW" />
-
-                </intent>
-                <intent>
-                    <action android:name="android.support.customtabs.action.CustomTabsService" />
-                    </intent>
-                </queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+        </intent>
+        <intent>
+            <action android:name="android.support.customtabs.action.CustomTabsService" />
+        </intent>
+    </queries>
 
 
     <application
         android:label="audit_cms"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:requestLegacyExternalStorage="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
