--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   downloads_path_provider_28: any
   file_picker: ^6.2.0
   jwt_decode: ^0.3.1
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
