--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,11 @@ dependencies:
   get: ^4.6.6
   flutter_spinkit: ^5.2.0
   flutter_speed_dial: ^7.0.0
-  webview_flutter: ^4.7.0
   url_launcher: ^6.2.5
   path_provider: ^2.1.2
   permission_handler: ^11.3.0
   syncfusion_flutter_pdfviewer: any
-  downloads_path_provider_28: any
+  downloads_path_provider_28: ^0.1.2
   file_picker: ^6.2.0
   jwt_decode: ^0.3.1
   infinite_scroll_pagination: ^4.0.0
