--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
   get: ^4.6.6
   flutter_spinkit: ^5.2.0
   flutter_speed_dial: ^7.0.0
-  url_launcher: ^6.2.5
   path_provider: ^2.1.2
   permission_handler: ^11.3.0
   syncfusion_flutter_pdfviewer: any
@@ -26,6 +25,7 @@ dependencies:
   file_picker: ^6.2.0
   jwt_decode: ^0.3.1
   infinite_scroll_pagination: ^4.0.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +39,7 @@ flutter:
 
   assets:
      - assets/images/
+     - assets/env/env_pro.env
 
   fonts:
     - family: RobotoBold
