--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   jwt_decode: ^0.3.1
   infinite_scroll_pagination: ^4.0.0
   flutter_dotenv: ^5.1.0
+  swipe_refresh: ^1.1.2
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
