--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   swipe_refresh: ^1.1.2
   device_info_plus: ^10.1.0
+  currency_text_input_formatter: ^2.2.3
 
 dev_dependencies:
   flutter_test:
