audit 253 - special schedule 1. Status done harus hilangkan button edit jadwal (wilayah) 2. Hapus validasi jika tanggal start_date dan end_date yang sama (wilayah)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
 
     <application
-        android:label="audit_cms"
+        android:label="KKA AUDIT CMS"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:requestLegacyExternalStorage="true">
