--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   device_info_plus: ^10.1.0
   currency_text_input_formatter: ^2.2.3
   dropdown_button2: ^2.3.9
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
